# quicktest

./: README.md  setup.cfg
src/quicktest/: __init__.py  classes.py
test/: test_quicktest.py
