[metadata]
name = quicktest
version = 0.0.1

[options]
python_requires = >= 3.8
package_dir=
    =src
include_package_data = True
packages = find:
# install_requires =
#     pandas >= 1.3.0
#     beautifulsoup4 >= 4.9.3
#     PyYAML >= 6.0
#     requests >= 2.26.0
#     www-authenticate >= 0.9.2
#     importlib; python_version == "3.8"

[options.packages.find]
where=src

# [options.package_data]
# * = data/*.*